--- a/theme.toml
+++ b/theme.toml
@@ -1,21 +1,9 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
 name = "Hugunica"
-license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
-description = ""
-homepage = "http://example.com/"
-tags = []
-features = []
+license = "AGPLv3"
+licenselink = "https://github.com/michaelskyba/hugunica/blob/main/LICENSE"
+description = "The Dragon (Hugo) Theme of Hugunica"
 min_version = "0.41.0"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Michael Skyba"
+  homepage = "https://michaelskyba.github.io"
