--- a/theme.toml
+++ b/theme.toml
@@ -5,5 +5,5 @@ description = "The Dragon (Hugo) Theme of Hugunica"
 min_version = "0.41.0"
 
 [author]
-  name = "Michael Skyba"
-  homepage = "https://michaelskyba.github.io"
+  name = "sucralose"
+  homepage = "https://veilm.github.io"
